--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     method="post">
                     <div class="div1">
                         Name*<br><input type="text" size="30" name="fullname"
-                             placeholder="Jane Doe" required><br>
+                             placeholder="Jane Doe" required><label for="name"><br>
                         Email*<br><input type="email" size="30" name="email" required><br>
                         Phone*<br><input type="tel" size="30" name="phonenumber"
                             placeholder="(xxx)-xxx-xxxx" required><br>
