--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,15 @@
                 <form class = "nestedgrid2" action="https://formspree.io/f/moqgjqod"
                     method="post">
                     <div class="div1">
-                        Name*<br><input type="text" size="30" name="fullname"
-                             placeholder="Jane Doe" required><label for="name"><br>
-                        Email*<br><input type="email" size="30" name="email" required><br>
-                        Phone*<br><input type="tel" size="30" name="phonenumber"
+                        <label for="name">Name*</label><br><input type="text" size="30" name="fullname"
+                             placeholder="Jane Doe" required><br>
+                        <label for="email">Email*</label><br><input type="email" size="30" name="email" required><br>
+                        <label for="phone number">Phone*</label><br><input type="tel" size="30" name="phonenumber"
                             placeholder="(xxx)-xxx-xxxx" required><br>
-                        Personal Website<br><input type="url" size="30" name="website"><br>
+                        <label for="website">Personal Website</label><br><input type="url" size="30" name="website"><br>
                     </div>
                     <div class="div2">
-                        Current High School<br><input type="text" list="schools"><br>
+                        <label for="school">Current High School</label><br><input type="text" list="schools"><br>
                             <datalist id="schools">
                                 <option value="Beaverbrook">
                                 <option value="Birchwood">
@@ -53,10 +53,10 @@
                                 <option value="Hainesville">
                                 <option value="Other">
                             </datalist>
-                        Expected date of entry<br><input type="date" name="date"><br>
-                        Number of days/week desired<br><input type="number" min="1" 
+                        <label for="entry date">Expected date of entry</label><br><input type="date" name="date"><br>
+                        <label for="days">Number of days/week desired</label><br><input type="number" min="1" 
                             max="5" step="1" value="2" name="numdays"><br>
-                        <input type= "submit" value="Help Me Boost My Scores!" class="button">
+                        <label for="submit"></label><input type= "submit" value="Help Me Boost My Scores!" class="button">
                     </div>
                 </form>
                 <div class="call">
