--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,15 @@
                 <form class = "nestedgrid2" action="https://formspree.io/f/moqgjqod"
                     method="post">
                     <div class="div1">
-                        <label for="name">Name*</label><br><input type="text" size="30" name="fullname"
-                             placeholder="Jane Doe" required><br>
-                        <label for="email">Email*</label><br><input type="email" size="30" name="email" required><br>
-                        <label for="phone number">Phone*</label><br><input type="tel" size="30" name="phonenumber"
-                            placeholder="(xxx)-xxx-xxxx" required><br>
-                        <label for="website">Personal Website</label><br><input type="url" size="30" name="website"><br>
+                        <label for="fullname">Name*</label><br><input type="text" size="30" name="fullname"
+                             id="fullname" placeholder="Jane Doe" required><br>
+                        <label for="email">Email*</label><br><input type="email" size="30" name="email" id="email" required><br>
+                        <label for="phonenumber">Phone*</label><br><input type="tel" size="30" name="phonenumber"
+                            id="phonenumber" placeholder="(xxx)-xxx-xxxx" required><br>
+                        <label for="website">Personal Website</label><br><input type="url" size="30" name="website" id="website"><br>
                     </div>
                     <div class="div2">
-                        <label for="school">Current High School</label><br><input type="text" list="schools"><br>
+                        <label for="schools">Current High School</label><br><input type="text" list="schools"><br>
                             <datalist id="schools">
                                 <option value="Beaverbrook">
                                 <option value="Birchwood">
