--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <label for="website">Personal Website</label><br><input type="url" size="30" name="website" id="website"><br>
                     </div>
                     <div class="div2">
-                        <label for="schools">Current High School</label><br><input type="text" list="schools"><br>
+                        <label for="schools">Current High School</label><br><input type="text" list="schools" id="schools"><br>
                             <datalist id="schools">
                                 <option value="Beaverbrook">
                                 <option value="Birchwood">
@@ -53,10 +53,10 @@
                                 <option value="Hainesville">
                                 <option value="Other">
                             </datalist>
-                        <label for="entry date">Expected date of entry</label><br><input type="date" name="date"><br>
+                        <label for="entrydate">Expected date of entry</label><br><input type="date" name="date" id="entrydate"><br>
                         <label for="days">Number of days/week desired</label><br><input type="number" min="1" 
-                            max="5" step="1" value="2" name="numdays"><br>
-                        <label for="submit"></label><input type= "submit" value="Help Me Boost My Scores!" class="button">
+                            max="5" step="1" value="2" name="numdays" id="days"><br>
+                        <label for="submit"></label><input type= "submit" value="Help Me Boost My Scores!" class="button" id="submit">
                     </div>
                 </form>
                 <div class="call">
