--- a/tests.html
+++ b/tests.html
@@ -53,7 +53,7 @@
                     plus an additional 55 minutes with the optional writing portion.
                 </p>
                 <div class="video">
-                    <video controls poster = "SAT.png" preload = "metadata">
+                    <video controls poster = "https://codehs.com/uploads/14070c59a2f8431b7744cac656730a88" preload = "metadata">
                     <source src = "https://codehs.com/uploads/0a3fa216b26694ad4bfdc73df874265b"
                     type = "video/mp4">
                     </video>
