--- a/tests.html
+++ b/tests.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="https://codehs.com/uploads/039e8b4df62859ac025e0b15361d2faa">
     </head>
     <body>
         <div class="container1">
