--- a/tests.html
+++ b/tests.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container1">
             <header class="headerwrapper">
-                <img class="headerpic" src="logo.png" alt="website logo">
+                <img class="headerpic" src="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034" alt="website logo">
                 <div class="headertext">
                     <h1>Test Prep Pros</h1>
                     <h3>Be ready for the ACT & SAT</h3>
