--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="https://codehs.com/uploads/039e8b4df62859ac025e0b15361d2faa">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div class="container1">
             <header class="headerwrapper">
-                <img class="headerpic" src="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034" alt="website logo">
+                <img class="headerpic" src="logo.png" alt="website logo">
                 <div class="headertext">
                     <h1>Test Prep Pros</h1>
                     <h3>Be ready for the ACT & SAT</h3>
@@ -36,15 +36,15 @@
                 <form class = "nestedgrid2" action="https://formspree.io/f/moqgjqod"
                     method="post">
                     <div class="div1">
-                        <label for="fullname">Name*</label><br><input type="text" size="30" name="fullname"
-                             id="fullname" placeholder="Jane Doe" required><br>
-                        <label for="email">Email*</label><br><input type="email" size="30" name="email" id="email" required><br>
-                        <label for="phonenumber">Phone*</label><br><input type="tel" size="30" name="phonenumber"
-                            id="phonenumber" placeholder="(xxx)-xxx-xxxx" required><br>
-                        <label for="website">Personal Website</label><br><input type="url" size="30" name="website" id="website"><br>
+                        Name*<br><input type="text" size="30" name="fullname"
+                             placeholder="Jane Doe" required><br>
+                        Email*<br><input type="email" size="30" name="email" required><br>
+                        Phone*<br><input type="tel" size="30" name="phonenumber"
+                            placeholder="(xxx)-xxx-xxxx" required><br>
+                        Personal Website<br><input type="url" size="30" name="website"><br>
                     </div>
                     <div class="div2">
-                        <label for="schools">Current High School</label><br><input type="text" list="schools" id="schools"><br>
+                        Current High School<br><input type="text" list="schools"><br>
                             <datalist id="schools">
                                 <option value="Beaverbrook">
                                 <option value="Birchwood">
@@ -53,10 +53,10 @@
                                 <option value="Hainesville">
                                 <option value="Other">
                             </datalist>
-                        <label for="entrydate">Expected date of entry</label><br><input type="date" name="date" id="entrydate"><br>
-                        <label for="days">Number of days/week desired</label><br><input type="number" min="1" 
-                            max="5" step="1" value="2" name="numdays" id="days"><br>
-                        <label for="submit"></label><input type= "submit" value="Help Me Boost My Scores!" class="button" id="submit">
+                        Expected date of entry<br><input type="date" name="date"><br>
+                        Number of days/week desired<br><input type="number" min="1" 
+                            max="5" step="1" value="2" name="numdays"><br>
+                        <input type= "submit" value="Help Me Boost My Scores!" class="button">
                     </div>
                 </form>
                 <div class="call">
