--- a/tests.html
+++ b/tests.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="https://codehs.com/uploads/039e8b4df62859ac025e0b15361d2faa">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div class="container1">
             <header class="headerwrapper">
-                <img class="headerpic" src="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034" alt="website logo">
+                <img class="headerpic" src="logo.png" alt="website logo">
                 <div class="headertext">
                     <h1>Test Prep Pros</h1>
                     <h3>Be ready for the ACT & SAT</h3>
@@ -53,7 +53,7 @@
                     plus an additional 55 minutes with the optional writing portion.
                 </p>
                 <div class="video">
-                    <video controls poster = "https://codehs.com/uploads/14070c59a2f8431b7744cac656730a88" preload = "metadata">
+                    <video controls poster = "SAT.png" preload = "metadata">
                     <source src = "https://codehs.com/uploads/0a3fa216b26694ad4bfdc73df874265b"
                     type = "video/mp4">
                     </video>
