--- a/tests.html
+++ b/tests.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034">
     </head>
     <body>
         <div class="container1">
@@ -53,7 +53,7 @@
                     plus an additional 55 minutes with the optional writing portion.
                 </p>
                 <div class="video">
-                    <video controls poster = "SAT.png" preload = "metadata">
+                    <video controls poster = "https://codehs.com/uploads/14070c59a2f8431b7744cac656730a88" preload = "metadata">
                     <source src = "https://codehs.com/uploads/0a3fa216b26694ad4bfdc73df874265b"
                     type = "video/mp4">
                     </video>
