--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="https://codehs.com/uploads/039e8b4df62859ac025e0b15361d2faa">
     </head>
     <body>
         <div class="container2">
             <header class="headerwrapper">
-                <img class="headerpic" src="logo.png" alt="website logo">
+                <img class="headerpic" src="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034" alt="website logo">
                 <div class="headertext">
                     <h1>Test Prep Pros</h1>
                     <h3>Be ready for the ACT & SAT</h3>
