--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="code.js"></script>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="https://codehs.com/uploads/039e8b4df62859ac025e0b15361d2faa">
     </head>
     <body>
         <div class="container4">
             <header class="headerwrapper">
-                <img class="headerpic" src="logo.png" alt="website logo">
+                <img class="headerpic" src="https://codehs.com/uploads/8dc0a1ebb39a5bbafa0455ef289e5034" alt="website logo">
                 <div class="headertext">
                     <h1>Test Prep Pros</h1>
                     <h3>Be ready for the ACT & SAT</h3>
@@ -47,21 +47,21 @@
                 </section>
                 <figure class="fig1">
                     <a href="http://education.ohio.gov/Topics/Testing/State-Funded-ACT-Test">
-                        <img src="OhioACT.png" alt="Ohio ACT Link"></a>
+                        <img src="https://codehs.com/uploads/2e0660ff8d0a073948c281001897b1a3" alt="Ohio ACT Link"></a>
                     <a href="http://education.ohio.gov/Topics/Testing/State-Funded-SAT-Test">
-                        <img src="OhioSAT.png" alt="Sat ACT Link"></a>
+                        <img src="https://codehs.com/uploads/155154d61e0f3c6beb41c29b345e6b9b" alt="Sat ACT Link"></a>
                     <figcaption>Ohio ACT & SAT</figcaption>
                 </figure>
             </main>
             
             <figure class="fig2">
                 <figcaption>Below: ACT, SAT and Practice Test Links</figcaption>
-                <a href="http://www.act.org/"><img class="pic1" src="ACT.png" 
+                <a href="http://www.act.org/"><img class="pic1" src="https://codehs.com/uploads/9c45f29af0c53a256bfac0612272d963" 
                     alt="ACT Site Link"></a>
                 <a href="https://collegereadiness.collegeboard.org/sat">
-                    <img class="pic2" src="SAT.png" alt="SAT Site Link "></a>
+                    <img class="pic2" src="https://codehs.com/uploads/14070c59a2f8431b7744cac656730a88" alt="SAT Site Link "></a>
                 <a href="https://education.ohio.gov/Topics/Testing/ACT-and-SAT-Practice-Tests">
-                    <img class="pic3" src="PracticeTests.png" alt="Practice Tests Link"></a>
+                    <img class="pic3" src="https://codehs.com/uploads/c0c9259097dea50f334496faebf5eb74" alt="Practice Tests Link"></a>
 
 </figure>
             
