--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                         <label for="entrydate">Expected date of entry</label><br><input type="date" name="date" id="entrydate"><br>
                         <label for="days">Number of days/week desired</label><br><input type="number" min="1" 
                             max="5" step="1" value="2" name="numdays" id="days"><br>
-                        <label for="submit"></label><input type= "submit" value="Help Me Boost My Scores!" class="button" id="submit">
+                        <label for="submit"><input type= "submit" value="Help Me Boost My Scores!" class="button" id="submit"></label>
                     </div>
                 </form>
                 <div class="call">
